--- a/.github/workflows/.github/workflows/ftp-deploy.yml
+++ b/.github/workflows/.github/workflows/ftp-deploy.yml
@@ -1,24 +1,16 @@
-name: 🚀 FTP Deploy to cPanel
-
-on:
-  push:
-    branches:
-      - main
-
+on: push
+name: 🚀 Deploy website on push
 jobs:
-  ftp-deploy:
+  web-deploy:
+    name: 🎉 Deploy
     runs-on: ubuntu-latest
-
     steps:
-    - name: 📥 Checkout repository
-      uses: actions/checkout@v3
-
-    - name: 📤 FTP Deploy
-      uses: SamKirkland/FTP-Deploy-Action@v4
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v4
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        server: ${{ secrets.FTP_HOST }}
-        username: ${{ secrets.FTP_USERNAME }}
-        password: ${{ secrets.FTP_PASSWORD }}
-        port: ${{ secrets.FTP_PORT }}
-        local-dir: ./ # lokasi lokal, biasanya root repo
-        server-dir: ${{ secrets.FTP_REMOTE_DIR }} # lokasi di server
+        server: ftp.kodai.id
+        username: tuan-coffee@tuan-coffee.laratest.my.id
+        password: ${{ secrets.ftp_password }}
