--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -5,11 +5,11 @@ jobs:
     name: 🎉 Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
+    - name: Checkout
       uses: actions/checkout@v4
-    
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+
+    - name: Upload Files
+      uses: pontago/lftp-deploy-action@master
       with:
         server: ftp.kodai.id
         username: tuan-coffee@tuan-coffee.laratest.my.id
