--- a/.github/workflows/ftp.yml
+++ b/.github/workflows/ftp.yml
@@ -1,18 +1,21 @@
-on: push
-name: 🚀 Deploy website on push
+name: Deploy to cPanel
+on:
+  push:
+    branches:
+      - main
 jobs:
-  web-deploy:
-    name: 🎉 Deploy
+  FTP-Deploy-Action:
+    name: FTP-Deploy-Action
     runs-on: ubuntu-latest
     steps:
-    - name: 🚚 Get latest code
-      uses: actions/checkout@v4
-
-    - name: 📂 Sync files
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-      with:
-        server: ftp.kodai.id
-        username: tuan-coffee@tuan-coffee.laratest.my.id
-        password: ${{ secrets.password }}
-        protocol: ftp
-        port: 21 # todo replace with your web hosts ftps port
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+      # Deploy to cPanel
+      - name: FTP-Deploy-Action
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ftp.kodai.id
+          username: tuan-coffee@tuan-coffee.laratest.my.id
+          password: ${{ secrets.FTP_PASSWORD }}
+          port: 21
